--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-redux": "^9.1.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
